--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="tooltip">Notifications</div>
                     </div>
                 </div>              
-                <img class="user-pic" src="Channel-pictures/my-channel-1.jpeg">
+                <img class="user-pic" src="Channel-pictures/my-channel-1.jpg">
             </div>
         </header>
 
